gap fix

--- a/src/index.css
+++ b/src/index.css
@@ -208,20 +208,18 @@ padding:10px;
   .contain{
     display: grid;
     grid-template-columns: repeat(3, 4fr);
-    width:100%;
-    grid-gap: 30px;
+    grid-gap: 10px;
   }
 }
 @media screen and (max-width:1024px) {
   .trust__pane{
-    padding:10px;
+    padding:40px;
     margin:0;
  
   }
   .contain{
     display: grid;
     grid-template-columns: repeat(4, 6fr);
-    width:100%;
-    grid-gap: 30px;
+    grid-gap: 10px;
   }
 }
